--- a/index.html
+++ b/index.html
@@ -433,6 +433,20 @@
 			
 		});
 	</script>
+	
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-139072001-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-139072001-1');
+</script>
+	
+	
+	
 </body>
 
 </html>
